--- a/livestockapp/templates/animal_profile/list_animal_profile.html
+++ b/livestockapp/templates/animal_profile/list_animal_profile.html
@@ -29,6 +29,7 @@
         {% comment %} <th scope="col">Date Of Birth</th> 
         <th scope="col">Description</th>{% endcomment %}
       
+      
         <th scope="col">Created By</th>
         <th scope="col">Created On</th>
         <th scope="col">Updated By</th>
@@ -67,6 +68,7 @@
 
       {% comment %} <td>{{animal.date_of_birth|date:"d-m-Y"}}</td> 
       <td>{{animal.description}}</td>{% endcomment %}
+      {% comment %} <td>{{animal.image}}</td> {% endcomment %}
       
        <td>{{animal.created_by}}</td>
       <td>{{animal.created_on|date:"d-m-Y"}}</td>    
