--- a/livestockapp/templates/animal_profile/insert_animal_profile.html
+++ b/livestockapp/templates/animal_profile/insert_animal_profile.html
@@ -76,10 +76,10 @@
           <option value="female">Female</option>
         </select>
       </div>
-      {% comment %} <div class="col-sm-3" >
+      <div class="col-sm-3" >
         <label class=" control-label">Uplod Image</label>
         <input class="form-control" type="file" id="image" name="image">
-      </div> {% endcomment %}
+      </div>
       <div  class="col-sm-3">
         
       </div>
