--- a/livestockapp/templates/share_animal/shared_animal_payment_input.html
+++ b/livestockapp/templates/share_animal/shared_animal_payment_input.html
@@ -92,17 +92,18 @@
       
       
       
-      <div class="col-sm-3"  id="hiddenFields1">
+      <div class="col-sm-3">
         <label class="from-group">Shared Person :</label>
-        <select id="person_id" name="person_id"  class="form-control" disabled>
+        <input type="text" id="person_id" name="person_id"  class="form-control" readonly>
+        {% comment %} <select id="person_id" name="person_id"  class="form-control" readonly>
           <option value="">Select Partner</option>
           {% for x in per %}
           <option value="{{x.id}}">{{x.username}}</option>  
         {% endfor %}
-        </select>    
+        </select>     {% endcomment %}
       </div>
      
-<div class="col-sm-3" id="hiddenFields2">
+<div class="col-sm-3">
   <label class="control-label">Shared Start Date :</label>
   <input type="date" class="form-control" name="start_date" readonly value="{{ start_date|default:'' }}" id="start_date">
 </div>
@@ -169,13 +170,12 @@
                   if (data.error) {
                       alert("Animal not found");
                   } else {
-                    
                       $("#ani_name").val(data.ani_name);
                       $("#color").val(data.color);
                       $("#weight").val(data.weight);
                       $("#category_id").val(data.category_id);
                       $("#gender").val(data.gender);
-                      $("#person_id").val(data.user_id);
+                      $("#person_id").val(data.shared_party_id);
                       $("#start_date").val(data.start_date);
                       $("#end_date").val(data.end_date);
                       $("#status").prop("checked", data.status);
