--- a/livestockapp/templates/share_animal/shared_animal_person_list.html
+++ b/livestockapp/templates/share_animal/shared_animal_person_list.html
@@ -19,20 +19,20 @@
       </tr>
     </thead>
     <tbody>
-      {% for party_profile in party_profiles %}
+      {% for shared_animal_detail in shared_animal_detail %}
 <tr>
     <th scope="row">{{ forloop.counter }}</th> 
-    <td>{{ party_profile.name }}</td>     
-    <td>{{ party_profile.phone_no }}</td>
-    <td>{{ party_profile.address }}</td> 
-    <td>{{ party_profile.number_of_animals }}</td>
-    {% if party_profile.status == 1 %} 
+    <td>{{ shared_animal_detail.name }}</td>     
+    <td>{{ shared_animal_detail.phone_no }}</td>
+    <td>{{ shared_animal_detail.address }}</td> 
+    <td>{{ shared_animal_detail.total_animal_count }}</td>
+    {% if shared_animal_detail.status == 1 %} 
     <td>Active</td>
     {% else %}
     <td>InActive</td>
     {% endif %}
     <td>
-        <a href="/edit_animal_profile/{{party_profile.animal_id}}" class="btn btn-sm btn-warning">Edit</a>
+        <a href="/shared_animal_list/{{shared_animal_detail.party_code}}" class="btn btn-sm btn-warning">Edit</a>
     </td>
 </tr>
 {% endfor %}
